# conciliaciones

./: .gitignore  .pylintrc  __init__.py  main.py  pyproject.toml
conciliaciones/clients/: __init__.py
conciliaciones/clients/erp/erp_data/: __init__.py  clean_data.py  get_erp.py  get_pivot_k.py
conciliaciones/clients/report/: __init__.py
conciliaciones/clients/report/erp_sat/: __init__.py  erp_sat_sheet.py
conciliaciones/clients/report/extra_sheets/: __init__.py  extra_sheets.py
conciliaciones/clients/report/indicators/: __init__.py  indicator_handler.py  indicator_sheets.py
conciliaciones/clients/report/metadata/: __init__.py  metadata_sheets.py
conciliaciones/clients/report/pivot_tables/: __init__.py  formato_pivot_table.py  procesador_pivots.py
conciliaciones/clients/report/resumen/: __init__.py  resumen_sheet.py
conciliaciones/clients/report/sat_no_erp/: __init__.py  sat_no_erp_sheet.py
conciliaciones/clients/report/save/: __init__.py  save_report.py
conciliaciones/clients/report/styles/: __init__.py  class_styles.py  excel_styles.py  report_styles.py  xlsxwritter_excel_styles.py
conciliaciones/clients/report/utils/: __init__.py  (+2 more)
conciliaciones/clients/sat/: __init__.py
conciliaciones/clients/services/: __init__.py  kore.py  kreports_resource.py
conciliaciones/models/: __init__.py  proceso_conciliacion.py  shared.py  sheets_model.py
conciliaciones/models/services/: __init__.py  kore_models.py  kreports_models.py  models.py
conciliaciones/utils/: __init__.py
conciliaciones/utils/completion_handler/: __init__.py  airflow_contex_exception.py
conciliaciones/utils/data/: __init__.py  normalize.py
conciliaciones/utils/filters/: __init__.py  conciliation_filters.py
conciliaciones/utils/headers/: __init__.py  headers_types.py
conciliaciones/utils/redis/: __init__.py  redis_keys.py  redis_storage.py
(+15 files in other folders)
